# Infantry-Little

./: .mxproject  CMakeLists.txt  Infantry-Little.ioc  STM32F407VETx_FLASH.ld  STM32F407XX_FLASH.ld  compile_commands.json  flash.jlink  openocd.cfg
Applications/: robot.c  robot_def.h  robot_task.h
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
Core/Src/: can.c  dma.c  freertos.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
DBG/: DBG.jdebug
Modules/LED/: CMakeLists.txt  LED.cpp  LED.h
Modules/Motor/ENCMOTOR/: EncoderMotor.c  EncoderMotor.h
Modules/Motor/TB6612/: TB6612.c  TB6612.h
Modules/NRF/: NRF.c  NRF.h
Modules/algorithm/: algorithm.md  controller.h
SEGGER/: CMakeLists.txt
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
